SERVER-51750 config.transactions cloner for resharding must not ignore records for multi-document transactions