src/mongo/db/s/resharding_txn_cloner_test.cpp
@@ -113,11 +113,25 @@ class ReshardingTxnClonerTest : public ShardServerTestFixture {
 protected:
     const std::vector<ShardId> kTwoShardIdList{{"s1"}, {"s2"}};
 
-    BSONObj makeTxn() {
-        return SessionTxnRecord(
-                   makeLogicalSessionIdForTest(), 0, repl::OpTime(Timestamp::min(), 0), Date_t())
-            .toBSON();
-        ;
+    const std::vector<DurableTxnStateEnum> kDurableTxnStateEnumValues = {
+        DurableTxnStateEnum::kPrepared,
+        DurableTxnStateEnum::kCommitted,
+        DurableTxnStateEnum::kAborted,
+        DurableTxnStateEnum::kInProgress};
+
+    std::vector<boost::optional<DurableTxnStateEnum>> getDurableTxnStatesAndBoostNone() {
+        std::vector<boost::optional<DurableTxnStateEnum>> statesAndBoostNone = {boost::none};
+        for (auto state : kDurableTxnStateEnumValues) {
+            statesAndBoostNone.push_back(state);
+        }
+        return statesAndBoostNone;
+    }
+
+    BSONObj makeTxn(boost::optional<DurableTxnStateEnum> multiDocTxnState = boost::none) {
+        auto txn = SessionTxnRecord(
+            makeLogicalSessionIdForTest(), 0, repl::OpTime(Timestamp::min(), 0), Date_t());
+        txn.setState(multiDocTxnState);
+        return txn.toBSON();
     }
 
     void onCommandReturnTxns(std::vector<BSONObj> firstBatch, std::vector<BSONObj> secondBatch) {
@@ -208,30 +222,29 @@ private:
 };
 
 TEST_F(ReshardingTxnClonerTest, TxnAggregation) {
-    std::vector<BSONObj> expectedTransactions{
-        makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn()};
+    std::vector<BSONObj> expectedTransactions{makeTxn(),
+                                              makeTxn(),
+                                              makeTxn(DurableTxnStateEnum::kPrepared),
+                                              makeTxn(DurableTxnStateEnum::kCommitted),
+                                              makeTxn(DurableTxnStateEnum::kAborted),
+                                              makeTxn(DurableTxnStateEnum::kInProgress),
+                                              makeTxn()};
     std::vector<BSONObj> retrievedTransactions;
 
-    auto future = launchAsync([&, this] {
-        auto fetcher =
-            cloneConfigTxnsForResharding(operationContext(),
-                                         kTwoShardIdList[1],
-                                         Timestamp::max(),
-                                         boost::none,
-                                         [&](OperationContext* opCtx, BSONObj transaction) {
-                                             retrievedTransactions.push_back(transaction);
-                                         },
-                                         nullptr);
-
-        fetcher->join();
-    });
+    auto fetcher = cloneConfigTxnsForResharding(operationContext(),
+                                                kTwoShardIdList[1],
+                                                Timestamp::max(),
+                                                boost::none,
+                                                [&](OperationContext* opCtx, BSONObj transaction) {
+                                                    retrievedTransactions.push_back(transaction);
+                                                },
+                                                nullptr);
 
     onCommandReturnTxns(
         std::vector<BSONObj>(expectedTransactions.begin(), expectedTransactions.begin() + 4),
         std::vector<BSONObj>(expectedTransactions.begin() + 4, expectedTransactions.end()));
 
-
-    future.default_timed_get();
+    fetcher->join();
 
     ASSERT(std::equal(expectedTransactions.begin(),
                       expectedTransactions.end(),
@@ -240,21 +253,23 @@ TEST_F(ReshardingTxnClonerTest, TxnAggregation) {
 }
 
 TEST_F(ReshardingTxnClonerTest, CursorNotFoundError) {
-    std::vector<BSONObj> expectedTransactions{
-        makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn(), makeTxn()};
+    std::vector<BSONObj> expectedTransactions{makeTxn(),
+                                              makeTxn(),
+                                              makeTxn(DurableTxnStateEnum::kPrepared),
+                                              makeTxn(DurableTxnStateEnum::kCommitted),
+                                              makeTxn(DurableTxnStateEnum::kAborted),
+                                              makeTxn(DurableTxnStateEnum::kInProgress),
+                                              makeTxn()};
     std::vector<BSONObj> retrievedTransactions;
     Status error = Status::OK();
 
-    auto future = launchAsync([&, this] {
-        auto fetcher = cloneConfigTxnsForResharding(
-            operationContext(),
-            kTwoShardIdList[1],
-            Timestamp::max(),
-            boost::none,
-            [&](auto opCtx, BSONObj transaction) { retrievedTransactions.push_back(transaction); },
-            &error);
-        fetcher->join();
-    });
+    auto fetcher = cloneConfigTxnsForResharding(
+        operationContext(),
+        kTwoShardIdList[1],
+        Timestamp::max(),
+        boost::none,
+        [&](auto opCtx, BSONObj transaction) { retrievedTransactions.push_back(transaction); },
+        &error);
 
     onCommand([&](const executor::RemoteCommandRequest& request) {
         return CursorResponse(NamespaceString::kSessionTransactionsTableNamespace,
@@ -267,7 +282,7 @@ TEST_F(ReshardingTxnClonerTest, CursorNotFoundError) {
         return Status(ErrorCodes::CursorNotFound, "Simulate cursor not found error");
     });
 
-    future.default_timed_get();
+    fetcher->join();
 
     ASSERT(std::equal(expectedTransactions.begin(),
                       expectedTransactions.end(),
@@ -277,41 +292,41 @@ TEST_F(ReshardingTxnClonerTest, CursorNotFoundError) {
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeTxnNotOnRecipient) {
-    Status status = Status::OK();
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    auto future = launchAsync([&, this] {
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber txnNum = 3;
+
+        auto txn = SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber txnNum = 3;
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
-
-    future.default_timed_get();
-
-    ASSERT(status.isOK());
-    checkTxnHasBeenUpdated(sessionId, txnNum);
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasBeenUpdated(sessionId, txnNum);
+    }
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeUnParsableTxn) {
     Status status = Status::OK();
 
-    auto future = launchAsync([&, this] {
-        auto fetcher = cloneConfigTxnsForResharding(operationContext(),
-                                                    kTwoShardIdList[1],
-                                                    Timestamp::max(),
-                                                    boost::none,
-                                                    &configTxnsMergerForResharding,
-                                                    &status);
-        fetcher->join();
-    });
+    auto fetcher = cloneConfigTxnsForResharding(operationContext(),
+                                                kTwoShardIdList[1],
+                                                Timestamp::max(),
+                                                boost::none,
+                                                &configTxnsMergerForResharding,
+                                                &status);
+
     const auto sessionId = makeLogicalSessionIdForTest();
     TxnNumber txnNum = 3;
     onCommandReturnTxns({SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now())
@@ -319,143 +334,183 @@ TEST_F(ReshardingTxnClonerTest, MergeUnParsableTxn) {
                              .removeField(SessionTxnRecord::kSessionIdFieldName)},
                         {});
 
-    future.default_timed_get();
+    fetcher->join();
 
     ASSERT_EQ(status.code(), 40414);
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeNewTxnOverMultiDocTxn) {
-    Status status = Status::OK();
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber donorTxnNum = 3;
-    TxnNumber recipientTxnNum = donorTxnNum - 1;
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    seedTransactionOnRecipient(sessionId, recipientTxnNum, true);
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber donorTxnNum = 3;
+        TxnNumber recipientTxnNum = donorTxnNum - 1;
 
-    auto future = launchAsync([&, this] {
+        seedTransactionOnRecipient(sessionId, recipientTxnNum, true);
+
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        auto txn = SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
-
-    future.default_timed_get();
-
-    ASSERT(status.isOK());
-    checkTxnHasBeenUpdated(sessionId, donorTxnNum);
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasBeenUpdated(sessionId, donorTxnNum);
+    }
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeNewTxnOverRetryableWriteTxn) {
-    Status status = Status::OK();
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber donorTxnNum = 3;
-    TxnNumber recipientTxnNum = donorTxnNum - 1;
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    seedTransactionOnRecipient(sessionId, recipientTxnNum, false);
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber donorTxnNum = 3;
+        TxnNumber recipientTxnNum = donorTxnNum - 1;
 
-    auto future = launchAsync([&, this] {
+        seedTransactionOnRecipient(sessionId, recipientTxnNum, false);
+
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        auto txn = SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
-
-    future.default_timed_get();
-
-    ASSERT(status.isOK());
-    checkTxnHasBeenUpdated(sessionId, donorTxnNum);
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasBeenUpdated(sessionId, donorTxnNum);
+    }
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeCurrentTxnOverRetryableWriteTxn) {
-    Status status = Status::OK();
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber txnNum = 3;
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    seedTransactionOnRecipient(sessionId, txnNum, false);
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber txnNum = 3;
 
-    auto future = launchAsync([&, this] {
+        seedTransactionOnRecipient(sessionId, txnNum, false);
+
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        auto txn = SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
-
-    future.default_timed_get();
-
-    ASSERT(status.isOK());
-    checkTxnHasBeenUpdated(sessionId, txnNum);
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasBeenUpdated(sessionId, txnNum);
+    }
 }
 
 TEST_F(ReshardingTxnClonerTest, MergeCurrentTxnOverMultiDocTxn) {
-    Status status = Status::OK();
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber txnNum = 3;
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    seedTransactionOnRecipient(sessionId, txnNum, true);
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber txnNum = 3;
 
-    auto future = launchAsync([&, this] {
+        seedTransactionOnRecipient(sessionId, txnNum, true);
+
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        auto txn = SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, txnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
-
-    future.default_timed_get();
-
-    ASSERT(status.isOK());
-    checkTxnHasNotBeenUpdated(sessionId, txnNum);
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasNotBeenUpdated(sessionId, txnNum);
+    }
 }
 
 
 TEST_F(ReshardingTxnClonerTest, MergeOldTxnOverTxn) {
-    Status status = Status::OK();
-    const auto sessionId = makeLogicalSessionIdForTest();
-    TxnNumber recipientTxnNum = 3;
-    TxnNumber donorTxnNum = recipientTxnNum - 1;
+    for (auto state : getDurableTxnStatesAndBoostNone()) {
+        Status status = Status::OK();
 
-    seedTransactionOnRecipient(sessionId, recipientTxnNum, false);
+        const auto sessionId = makeLogicalSessionIdForTest();
+        TxnNumber recipientTxnNum = 3;
+        TxnNumber donorTxnNum = recipientTxnNum - 1;
 
-    auto future = launchAsync([&, this] {
+        seedTransactionOnRecipient(sessionId, recipientTxnNum, false);
+
         auto fetcher = cloneConfigTxnsForResharding(operationContext(),
                                                     kTwoShardIdList[1],
                                                     Timestamp::max(),
                                                     boost::none,
                                                     &configTxnsMergerForResharding,
                                                     &status);
+
+        auto txn = SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now());
+        txn.setState(state);
+        onCommandReturnTxns({txn.toBSON()}, {});
+
         fetcher->join();
-    });
 
-    onCommandReturnTxns(
-        {SessionTxnRecord(sessionId, donorTxnNum, repl::OpTime(), Date_t::now()).toBSON()}, {});
+        ASSERT(status.isOK()) << str::stream()
+                              << (state ? DurableTxnState_serializer(*state) : "retryable write");
+        checkTxnHasNotBeenUpdated(sessionId, recipientTxnNum);
+    }
+}
 
-    future.default_timed_get();
+TEST_F(ReshardingTxnClonerTest, MergeMultiDocTransactionAndRetryableWrite) {
+    Status status = Status::OK();
+
+    const auto sessionIdRetryableWrite = makeLogicalSessionIdForTest();
+    const auto sessionIdMultiDocTxn = makeLogicalSessionIdForTest();
+    TxnNumber txnNum = 3;
+
+    auto fetcher = cloneConfigTxnsForResharding(operationContext(),
+                                                kTwoShardIdList[1],
+                                                Timestamp::max(),
+                                                boost::none,
+                                                &configTxnsMergerForResharding,
+                                                &status);
+
+    auto sessionRecordRetryableWrite =
+        SessionTxnRecord(sessionIdRetryableWrite, txnNum, repl::OpTime(), Date_t::now());
+    auto sessionRecordMultiDocTxn =
+        SessionTxnRecord(sessionIdMultiDocTxn, txnNum, repl::OpTime(), Date_t::now());
+    sessionRecordMultiDocTxn.setState(DurableTxnStateEnum::kAborted);
+
+    onCommandReturnTxns({sessionRecordRetryableWrite.toBSON(), sessionRecordMultiDocTxn.toBSON()},
+                        {});
+
+    fetcher->join();
 
     ASSERT(status.isOK());
-    checkTxnHasNotBeenUpdated(sessionId, recipientTxnNum);
+    checkTxnHasBeenUpdated(sessionIdRetryableWrite, txnNum);
+    checkTxnHasBeenUpdated(sessionIdMultiDocTxn, txnNum);
 }
 
 }  // namespace
